[gd_scene load_steps=4 format=3 uid="uid://c7ickawmba62u"]

[ext_resource type="Script" path="res://Utility/UpgradeOption.gd" id="1_fur20"]
[ext_resource type="Texture2D" uid="uid://b61pgemetxaqe" path="res://Textures/dungeon tileset/weapon_knife.png" id="2_xr1i5"]
[ext_resource type="FontFile" uid="uid://cc5nervu2ccsv" path="res://Font/EightBitDragon-anqx.ttf" id="3_wbhh5"]

[node name="UpgradeOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.298039, 0.666667, 0.619608, 1)
script = ExtResource("1_fur20")

[node name="ItemImg" type="ColorRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 46.0
offset_bottom = 45.0
color = Color(0.94902, 0.94902, 0.94902, 1)

[node name="ItemIcon" type="TextureRect" parent="ItemImg"]
texture_filter = 1
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 36.0
texture = ExtResource("2_xr1i5")

[node name="ItemName" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 52.0
offset_top = 5.0
offset_right = 117.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_wbhh5")
theme_override_font_sizes/font_size = 10
text = "itemName"
vertical_alignment = 1

[node name="ItemLv" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 120.0
offset_top = 5.0
offset_right = 175.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_wbhh5")
theme_override_font_sizes/font_size = 10
text = "itemLv"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemDesc" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 49.0
offset_top = 16.0
offset_right = 176.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("3_wbhh5")
theme_override_font_sizes/font_size = 6
text = "this is an item description
containing a description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
